Add to feature list

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           <li>Field games</li>
           <li>Giant tree swing</li>
           <li>Gemma's fancy dress box</li>
+          <li>A bar with chilled beverages</li>
+          <li>Wild mushroom foraging</li>
           <li>Open space, green grass and fresh air!</li>
         </ul>
 
