--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <hr>
 
         <h3 class="is-size-3 py-3" style="color: #9A0033">Location</h3>
-        <p class="py-3">We will be revelling in the beautiful fields of the The Peels farm, in the rolling hills of Northumberland:</p>
+        <p class="py-3">We will be revelling in the beautiful fields of The Peels farm, in the rolling hills of Northumberland:</p>
         <p><strong>The Peels</strong></p>
         <p><strong>Harbottle</strong></p>
         <p><strong>Morpeth</strong></p>
@@ -93,6 +93,7 @@
         <p><strong>NE65 7DL</strong></p>
 
         <hr>
+
         <h3 class="is-size-3 py-3" style="color: #9A0033">Essential Info</h3>
         <p class="py-3">Tom will cook two delicious and nutritious meals (including vegan options): on Friday evening and Saturday evening, and there will be a BBQ for people to cook their own food, too.</p>
         <p class="py-3">If anyone would like to get involved and be part of the entertainment, get in touch.</p>
