Add travel info, and favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Corleychella 2021</title>
+    <link rel="icon" type="image/png" href="/favicon.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
   </head>
   <body>
@@ -36,7 +37,7 @@
 
         <hr>
 
-        <h3 class="is-size-3 py-3" style="color: #9A0033">Featuring</h3>
+        <h3 id="featuring" class="is-size-3 py-3" style="color: #9A0033">Featuring</h3>
 
         <ul>
           <li>10m dome (<a href="https://www.atlasdomes.co.uk">Atlas Domes</a>)</li>
@@ -62,14 +63,14 @@
 
         <hr>
 
-        <h3 class="is-size-3 py-3" style="color: #9A0033">Get in touch to pay and reserve your ticket</h3>
+        <h3 id="get-in-touch" class="is-size-3 py-3" style="color: #9A0033">Get in touch to pay and reserve your ticket</h3>
         <p><strong>07835285017</strong></p>
         <p><strong>thomcorley@gmail.com</strong></p>
         <p class="py-3">Sort code and account number are in the Corleychella 2021 WhatsApp group. Request to be added if you're not in it already :)</p>
 
         <hr>
 
-        <h3 class="is-size-3 py-3" style="color: #9A0033">The theme is: Nautical / Sea</h3>
+        <h3 id="theme" class="is-size-3 py-3" style="color: #9A0033">The theme is: Nautical / Sea</h3>
 
         <p class="is-size-3 py-3">💦&nbsp;&nbsp;🏴‍☠️&nbsp;&nbsp;🐙&nbsp;&nbsp;🐠&nbsp;&nbsp;🚢&nbsp;&nbsp;💦&nbsp;&nbsp;🐬&nbsp;&nbsp;👨🏼‍✈️ </p>
 
@@ -84,7 +85,7 @@
 
         <hr>
 
-        <h3 class="is-size-3 py-3" style="color: #9A0033">Location</h3>
+        <h3 id="location" class="is-size-3 py-3" style="color: #9A0033">Location</h3>
         <p class="py-3">We will be revelling in the beautiful fields of The Peels farm, in the rolling hills of Northumberland:</p>
         <p><strong>The Peels</strong></p>
         <p><strong>Harbottle</strong></p>
@@ -92,9 +93,28 @@
         <p><strong>Northumberland</strong></p>
         <p><strong>NE65 7DL</strong></p>
 
+        <p class="py-3">
+          <a href="https://goo.gl/maps/T4mtXVyAprQxq3Xi7" target="blank">Exact location on Google maps</a>
+        </p>
+
         <hr>
 
-        <h3 class="is-size-3 py-3" style="color: #9A0033">Essential Info</h3>
+        <h3 id="travel" class="is-size-3 py-3" style="color: #9A0033">Travel</h3>
+        <p class="py-3">You'll be travelling to the depths of rural Northumberland, where it's remote, beautiful and quiet.</p>
+
+        <p class="py-3">Getting all the way to The Peels farm is not easily done via public transport, so we advise you to drive if you have a vehicle. And share lifts where possible.</p>
+
+        <p class="is-size-2 py-3">🚗 🚙 🚗</p>
+
+        <p class="py-3">If driving isn't an option, then get a train to Berwick upon Tweed which is a 50 minute drive away. We can then pick you up for a fare of £10 per person. Alternatively get a taxi from Berwick, but this will be very expensive!</p>
+
+        <p class="py-3">Please use the WhatsApp group for lift sharing options. If you need picked up from the train station, aim to arrive in Berwick for 1pm on Friday. And let us know so we can organise in advance. We won't be able to pick people up from the station later in the afternoon because we'll be partying!</p>
+
+        <p class="is-size-2 py-3">🕺</p>
+
+        <hr>
+
+        <h3 id="essential-info" class="is-size-3 py-3" style="color: #9A0033">Essential Info</h3>
         <p class="py-3">Tom will cook two delicious and nutritious meals (including vegan options): on Friday evening and Saturday evening, and there will be a BBQ for people to cook their own food, too.</p>
         <p class="py-3">If anyone would like to get involved and be part of the entertainment, get in touch.</p>
         <p class="py-3">There will be toilets, to ensure good sanitisation and comfort.</p>
