--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <p class="is-size-2 py-3">🚗 🚙 🚗</p>
 
-        <p class="py-3">If driving isn't an option, then get a train to Berwick upon Tweed which is a 50 minute drive away. We can then pick you up for a fare of £10 per person. Alternatively get a taxi from Berwick, but this will be very expensive!</p>
+        <p class="py-3">If driving isn't an option, then get a train to Berwick upon Tweed which is a 50 minute drive away. We can then pick you up for a fare of £10 per person. Alternatively get a taxi from Berwick, but this will be expensive.</p>
 
         <p class="py-3">Please use the WhatsApp group for lift sharing options. If you need picked up from the train station, aim to arrive in Berwick for 1pm on Friday. And please let us know so we can organise in advance. We won't be able to pick people up from the station later in the afternoon because we'll be partying!</p>
 
