--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Corleychella 2021</title>
+    <title>Corleychella (Plan B)</title>
     <link rel="icon" type="image/png" href="/favicon.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
   </head>
@@ -40,8 +40,6 @@
         <h3 id="featuring" class="is-size-3 py-3" style="color: #9A0033">Featuring</h3>
 
         <ul>
-          <li>10m dome (<a href="https://www.atlasdomes.co.uk">Atlas Domes</a>)</li>
-          <li>Ghost sound system</li>
           <li>Live DJs – Lewis and friends</li>
           <li>Open mic</li>
           <li>Poetry readings</li>
@@ -51,22 +49,10 @@
           <li>Field games</li>
           <li>Giant tree swing</li>
           <li>Gemma's fancy dress box</li>
-          <li>A bar with chilled beverages</li>
+          <li>Honesty bar with chilled beverages</li>
           <li>Wild mushroom foraging</li>
           <li>Open space, green grass and fresh air!</li>
         </ul>
-
-        <hr>
-
-        <p class="py-3">This is a non-profit event, but we need to break even on the costs of the dome, sound system and generator hire, so we're asking for a small contribution of <strong>£35</strong> from each person.</p>
-        <p class="py-3">This should cover most of the costs and we'll make up the rest by selling cold beverages at the event at an "honesty bar". Once we've broken even, any remaining drinks will be on the house</p>
-
-        <hr>
-
-        <h3 id="get-in-touch" class="is-size-3 py-3" style="color: #9A0033">Get in touch to pay and reserve your ticket</h3>
-        <p><strong>07835285017</strong></p>
-        <p><strong>thomcorley@gmail.com</strong></p>
-        <p class="py-3">Sort code and account number are in the Corleychella 2021 WhatsApp group. Request to be added if you're not in it already :)</p>
 
         <hr>
 
@@ -108,15 +94,26 @@
 
         <p class="py-3">If driving isn't an option, then get a train to Berwick upon Tweed which is a 50 minute drive away. We can then pick you up for a fare of £10 per person. Alternatively get a taxi from Berwick, but this will be expensive.</p>
 
-        <p class="py-3">Please use the WhatsApp group for lift sharing options. If you need picked up from the train station, aim to arrive in Berwick for 1pm on Friday. And please let us know so we can organise in advance. We won't be able to pick people up from the station later in the afternoon because we'll be partying!</p>
+        <p class="py-3">Please use the WhatsApp group for lift sharing options. If you need picked up from the train station, aim to arrive in Berwick for 1pm on Friday. And please let us know so we can organise in advance. We won't be able to pick people up from the station later in the afternoon (or at any time later in the weekend) because we'll be partying!</p>
 
         <p class="is-size-2 py-3">🕺</p>
 
         <hr>
 
+        <h3 id="travel" class="is-size-3 py-3" style="color: #9A0033">Covid Restrictions</h3>
+
+        <p class="py-3">One of the requirements from our parents that this event can go ahead on their farm is that it must be legal from a Covid point of view. This means we are allowed a maximum of <b>30</b> people.</p>
+
+        <p class="py-3">If you're a member of the <b>Corleychella Plan B</b> WhatsApp group then you're invited! Please let us know if you're able to make it so we know the numbers.</p>
+
+        <hr>
+
         <h3 id="essential-info" class="is-size-3 py-3" style="color: #9A0033">Essential Info</h3>
+
         <p class="py-3">Tom will cook two delicious and nutritious meals (including vegan options): on Friday evening and Saturday evening, and there will be a BBQ for people to cook their own food, too.</p>
+
         <p class="py-3">If anyone would like to get involved and be part of the entertainment, get in touch.</p>
+
         <p class="py-3">There will be toilets, to ensure good sanitisation and comfort.</p>
 
         <p class="py-3">We're camping, so bring your tent and any other camping stuff you might need</p>
