--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="section">
       <div style="max-width: 600px;" class="container has-text-centered">
 
-        <h1 class="title is-size-1">Corleychella 2021</h1>
+        <h1 class="title is-size-1">Corleychella (Plan B)</h1>
         <h3 class="is-size-5" style="color: #9A0033">JUL 9 AT 2 PM – JUL 11 AT 5 PM</h3>
 
         <hr>
