--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         <h3 id="travel" class="is-size-3 py-3" style="color: #9A0033">Travel</h3>
         <p class="py-3">You'll be travelling to the depths of rural Northumberland, where it's remote, beautiful and quiet.</p>
 
-        <p class="py-3">Getting all the way to The Peels farm is not easily done via public transport, so we advise you to drive if you have a vehicle. And share lifts where possible.</p>
+        <p class="py-3">Getting all the way to The Peels farm is not easily done via public transport, so we advise you to drive if you have a vehicle. And share lifts where possible. Please use the WhatsApp group for lift sharing options.</p>
 
         <p class="is-size-2 py-3">🚗 🚙 🚗</p>
 
-        <p class="py-3">If driving isn't an option, then get a train to Berwick upon Tweed which is a 50 minute drive away. We can then pick you up for a fare of £10 per person. Alternatively get a taxi from Berwick, but this will be expensive.</p>
+        <p class="py-3">If driving isn't an option, then get a train to Berwick upon Tweed which is a 50 minute drive away. We can then pick you up <b>on Friday only, around 1pm</b> for a fare of £10 per person. Please let us know so we can organise in advance. We won't be able to pick people up from the station later in the afternoon (or at any time later in the weekend) because we'll be partying! Alternatively get a taxi from Berwick, but this will be expensive.</p>
 
-        <p class="py-3">Please use the WhatsApp group for lift sharing options. If you need picked up from the train station, aim to arrive in Berwick for 1pm on Friday. And please let us know so we can organise in advance. We won't be able to pick people up from the station later in the afternoon (or at any time later in the weekend) because we'll be partying!</p>
+        <p class="py-3"> </p>
 
         <p class="is-size-2 py-3">🕺</p>
 
