--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Corleychella (Plan B)</title>
+    <title>Corleychella</title>
     <link rel="icon" type="image/png" href="/favicon.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
   </head>
@@ -15,7 +15,7 @@
     <section class="section">
       <div style="max-width: 600px;" class="container has-text-centered">
 
-        <h1 class="title is-size-1">Corleychella (Plan B)</h1>
+        <h1 class="title is-size-1">Corleychella</h1>
         <h3 class="is-size-5" style="color: #9A0033">JUL 9 AT 2 PM – JUL 11 AT 5 PM</h3>
 
         <hr>
@@ -71,20 +71,6 @@
 
         <hr>
 
-        <h3 id="location" class="is-size-3 py-3" style="color: #9A0033">Location</h3>
-        <p class="py-3">We will be revelling in the beautiful fields of The Peels farm, in the rolling hills of Northumberland:</p>
-        <p><strong>The Peels</strong></p>
-        <p><strong>Harbottle</strong></p>
-        <p><strong>Morpeth</strong></p>
-        <p><strong>Northumberland</strong></p>
-        <p><strong>NE65 7DL</strong></p>
-
-        <p class="py-3">
-          <a href="https://goo.gl/maps/T4mtXVyAprQxq3Xi7" target="git blank">Exact location on Google maps</a>
-        </p>
-
-        <hr>
-
         <h3 id="travel" class="is-size-3 py-3" style="color: #9A0033">Travel</h3>
         <p class="py-3">You'll be travelling to the depths of rural Northumberland, where it's remote, beautiful and quiet.</p>
 
@@ -94,9 +80,52 @@
 
         <p class="py-3">If driving isn't an option, then get a train to Berwick upon Tweed which is a 50 minute drive away. We can then pick you up <b>on Friday only, around 1pm</b> for a fare of £10 per person. Please let us know so we can organise in advance. We won't be able to pick people up from the station later in the afternoon (or at any time later in the weekend) because we'll be partying! Alternatively get a taxi from Berwick, but this will be expensive.</p>
 
-        <p class="py-3"> </p>
+        <hr>
 
-        <p class="is-size-2 py-3">🕺</p>
+        <h3 id="location" class="is-size-3 py-3" style="color: #9A0033">Location</h3>
+        <p class="py-3">We will be revelling in the beautiful fields of The Peels farm, in the rolling hills of Northumberland. This is the address of the farm, but bear in mind that <em>the exact location of the festival is about 1/2 a mile from this address</em>. See below for further directions.</p>
+
+        <p><b>The Peels</b></p>
+        <p><b>Harbottle</b></p>
+        <p><b>Morpeth</b></p>
+        <p><b>Northumberland</b></p>
+        <p><b>NE65 7DL</b></p>
+
+        <p class="py-3">
+          <a href="https://goo.gl/maps/T4mtXVyAprQxq3Xi7" target="git blank">Exact location on Google maps</a>
+        </p>
+
+        <p class="py-3">The festival field is about 1/2 a mile from the farm buildings, accessed via a track off the long straight road that leads down to the farm. Turn right by the Corleychella sign, then drive around 500m along the track to the field. Please remember to shut the gates behind you.</p>
+
+        <hr>
+
+        <h3 id="food" class="is-size-3 py-3" style="color: #9A0033">Food</h3>
+        <p class="is-size-1 py-1">🥘</p>
+
+        <p class="py-3">Tom will cook two meals: on Friday evening and Saturday evening, but the remainder of meals you must provide for yourselves, so <b>make sure to bring food with you</b>.</p>
+
+        <p class="py-3">There will be a BBQ for you to use, too.</p>
+
+        <p class="py-3">There is also <a href="https://thestarinnharbottle.co.uk/pizzeria">decent pizza in the nearby village. </a>Authentic Italian pizza in the depths of rural Northumberland!</p>
+
+        <hr>
+
+        <p class="py-3"><b>Friday Menu</b></p>
+        <p>Mixed bean chilli</p>
+        <p>Beef chilli</p>
+        <p>Tortilla wraps</p>
+        <p>Sour Cream</p>
+        <p>Tomato Salsa</p>
+        <p>Grated cheese</p>
+
+        <hr>
+
+        <p class="py-3"><b>Saturday Menu</b></p>
+        <p>Coconut and chickpea curry</p>
+        <p>Chicken curry</p>
+        <p>Popadoms</p>
+        <p>Mango chutney</p>
+        <p>Flatbreads</p>
 
         <hr>
 
@@ -110,15 +139,9 @@
 
         <h3 id="essential-info" class="is-size-3 py-3" style="color: #9A0033">Essential Info</h3>
 
-        <p class="py-3">Tom will cook two delicious and nutritious meals (including vegan options): on Friday evening and Saturday evening, and there will be a BBQ for people to cook their own food, too.</p>
+        <p class="py-3">There will be a toilet, to ensure good sanitisation and comfort.</p>
 
-        <p class="py-3">If anyone would like to get involved and be part of the entertainment, get in touch.</p>
-
-        <p class="py-3">There will be toilets, to ensure good sanitisation and comfort.</p>
-
-        <p class="py-3">We're camping, so bring your tent and any other camping stuff you might need</p>
-
-        <p>In addition to the food options mentioned above, there is <a href="https://thestarinnharbottle.co.uk/pizzeria">decent pizza in the nearby village. </a>Authentic Italian pizza in the depths of rural Northumberland!</p>
+        <p class="py-3">We're camping, so bring your tent and any other camping stuff you might need. Don't forget to pack a raincoat, it might not be sunny the whole time!</p>
 
         <p class="py-3">Partners and plus ones are welcome! Can't wait to see you all ♥️</p>
       </div>
