--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 
         <p class="py-3">Tom will cook two meals: on Friday evening and Saturday evening, but the remainder of meals you must provide for yourselves, so <b>make sure to bring food with you</b>.</p>
 
-        <p class="py-3">There will be a BBQ for you to use, too.</p>
+        <p class="py-3"><b>Please bring your own cutlery and plates.</b></p>
+
+        <p class="py-3">There will be a BBQ for you to use.</p>
 
         <p class="py-3">There is also <a href="https://thestarinnharbottle.co.uk/pizzeria">decent pizza in the nearby village. </a>Authentic Italian pizza in the depths of rural Northumberland!</p>
 
