--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <a href="https://goo.gl/maps/T4mtXVyAprQxq3Xi7" target="git blank">Exact location on Google maps</a>
         </p>
 
-        <p class="py-3">The festival field is about 1/2 a mile from the farm buildings, accessed via a track off the long straight road that leads down to the farm. Turn right by the Corleychella sign, then drive around 500m along the track to the field. Please remember to shut the gates behind you.</p>
+        <p class="py-3">The festival field is about 1/2 a mile from the farm buildings, accessed via a track off the long straight road that leads down to the farm. Turn right by the Corleychella sign, then drive approximately 500m along the track to the field. Please remember to shut the gates behind you.</p>
 
         <hr>
 
